--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-simple-render-rs = { path = "C:/Users/glebm/OneDrive/Документы/ExploreTeam/repositories/simple-render-rs" }
+simple-render-rs = { git = "https://github.com/BreadAboba228/simple-render-rs" }
