examples instead of tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-simple-render-rs = { git = "https://github.com/BreadAboba228/simple-render-rs" }
 simple-linear-algebra-rs = { git = "https://github.com/BreadAboba228/simple-linear-algebra-rs" }
+simple-render-rs = { git = "https://github.com/BreadAboba228/simple-render-rs" }
+minifb = "0.28.0"
