--- a/crates/simple-graph-builder/Cargo.toml
+++ b/crates/simple-graph-builder/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "graph-builder-rs"
-version = "0.1.0"
-edition = "2024"
+name = "simple-graph-builder"
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
-minifb = "0.28.0"
-simple-render-rs = { path = "C:/Users/glebm/OneDrive/Документы/ExploreTeam/repositories/simple-render-rs" }
-simple-linear-algebra-rs = { git = "https://github.com/BreadAboba228/simple-linear-algebra-rs" }
+minifb.workspace = true
+simple-render = { path = "../simple-render" }
+simple-linear-algebra = { path = "../simple-linear-algebra" }
