--- a/crates/simple-linear-algebra/Cargo.toml
+++ b/crates/simple-linear-algebra/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "simple-linear-algebra-rs"
-version = "0.1.0"
-edition = "2024"
+name = "simple-linear-algebra"
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
