--- a/crates/simple-render/Cargo.toml
+++ b/crates/simple-render/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "simple-render-rs"
-version = "0.1.0"
-edition = "2024"
+name = "simple-render"
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
-minifb = "0.28.0"
-simple-linear-algebra-rs = { git = "https://github.com/BreadAboba228/simple-linear-algebra-rs" }
+minifb.workspace = true
+simple-linear-algebra = { path = "../simple-linear-algebra" }
